<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">


    <TextView
        android:id="@+id/AppName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:layout_centerHorizontal="true"
        android:textSize="30dp"
        android:textStyle="bold"
        android:layout_marginTop="30dp"
        />

    <TextView
        android:id="@+id/PhoneName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_name"
        android:layout_below="@id/GambarSamsung"
        android:layout_alignParentStart="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginLeft="20dp"
        />

    <TextView
        android:id="@+id/PhonePrice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone_price"
        android:layout_below="@id/GambarSamsung"
        android:layout_alignParentEnd="true"
        android:textSize="20dp"
        android:textStyle="bold"
        android:layout_marginRight="20dp"
        />

    <TextView
        android:id="@+id/PhoneDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PhonePrice"
        android:layout_centerHorizontal="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        android:text="@string/phone_desc"
        android:textSize="10dp" />

    <ImageView
        android:id="@+id/GambarSamsung"
        android:layout_width="226dp"
        android:layout_height="193dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:layout_below="@+id/AppName"
        android:layout_centerHorizontal="true"
        app:srcCompat="@drawable/samsung" />

    <ImageView
        android:id="@+id/imageMemory"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/PhoneDesc"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_baseline_memory_24" />

    <TextView
        android:id="@+id/memoryDesc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/memory"
        android:layout_toEndOf="@id/imageMemory"
        android:layout_alignBottom="@id/imageMemory"
        />

    <ImageView
        android:id="@+id/imageCamera"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageMemory"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_baseline_camera_24" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera"
        android:layout_toEndOf="@id/imageCamera"
        android:layout_alignBottom="@id/imageCamera"
        />

    <ImageView
        android:id="@+id/imagePhone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/imageCamera"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="20dp"
        app:srcCompat="@drawable/ic_baseline_phone_android_24" />

    <TextView
        android:id="@+id/Phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/PhoneNum"
        android:layout_toEndOf="@id/imagePhone"
        android:layout_alignBottom="@id/imagePhone"
        />

    <Button
        android:id="@+id/Bookmarks"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="20dp"
        android:textAlignment="center"
        android:text="Bookmark"
        android:drawableLeft="@drawable/ic_baseline_bookmark_border_24"/>



</RelativeLayout>




















